# adversarial_networks

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  conda-lock.yml  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
adversarial_networks/: __init__.py  config.py  constants.py  contracts.py  data.py  datasets.py  discriminator.py  ego.py  estimator.py  estimator_config.py  generators.py  io_utils.py  losses.py  observability.py  provenance.py  reporting.py  runner.py  sampling.py  stopping.py  transforms.py  visualization.py
adversarial_networks/core/: __init__.py  ego_features.py  equilibrium.py  graph.py  neighborhoods.py  objective.py  types.py
docs/design/: ARCHITECTURE.md  DECISIONS.md  EXTENDING.md  PUBLIC_API.md  README.md  THEORY_ENFORCEMENT.md
experiments/: asymptotic_mc_experiment.py  custom_game_model.ipynb  effort_game_model.ipynb  linear_in_means_model.ipynb
src/: __init__.py  config.py  constants.py  contracts.py  discriminator.py  effort_generator.py  ego.py  estimator.py  estimator_config.py  generator.py  io_utils.py  losses.py  observability.py  plot_style.py  root_sampling.py  stopping.py  utils.py  visualization.py
src/tests/: test_effort_generator.py
src/tests/reports/: report.html
tests/: conftest.py  test_asymptotic_mc_experiment.py  test_check_model.py  test_core_ego_features.py  test_core_equilibrium.py  test_core_graph.py  test_core_objective.py  test_data.py  test_datasets.py  test_discriminator.py  test_effort_config.py  test_effort_generator.py  test_ego_substrate.py  test_estimator.py  test_generators.py  test_losses.py  test_recovery.py  test_recovery_fast.py  test_reporting.py  test_root_sampling.py  test_runner.py  test_transforms.py  test_utils.py  test_vector_covariates.py  test_visualization.py
