[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-networks"
dynamic = ["version"]
description = "A general framework for adversarial structural estimation of network-equilibrium models on a single graph"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vít Illichmann"},
]
license = {text = "MIT"}

dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "networkx>=3.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-html>=4.0",
    "ruff>=0.1",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "adversarial_networks.__version__"}

[tool.setuptools.packages.find]
include = ["adversarial_networks*"]

[tool.setuptools.package-data]
adversarial_networks = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["__pycache__", ".pytest_cache", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# E501: line length (handled by formatter). N8xx: the domain-math naming convention
# (X covariates, Y outcomes, W interaction matrix, F = nn.functional) used throughout
# the package and the source papers — intentional, not a style slip.
ignore = ["E501", "N802", "N803", "N806", "N812"]
